TestRepo2/src/objects/Action_History__c.object
<CustomObject>
    <fields>
        <fullName>Accomplishment_Recap__c</fullName>
        <label>Accomplishment Recap</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Goal_Name__c</fullName>
        <formula>Account__r.Territory__r.Name &amp; &quot; - &quot; &amp; Goal__r.Name &amp; &quot; - &quot; &amp;  Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory, Goal &amp; Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_State__c</fullName>
        <formula>TEXT(Account__r.Territory__r.State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Action_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Action_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Action_Reporting_Type__c</fullName>
        <description>This Workflow Rule will automatically populate the picklist value for the Objective Reporting Type field, based on the Record Type. This is for reporting purposes (Individual Activity Management)</description>
        <label>Action Reporting Type</label>
        <picklist>
            <picklistValues>
                <fullName>Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ease of Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Blitz_Brand__c</fullName>
        <label>Blitz Brand</label>
        <picklist>
            <picklistValues>
                <fullName>Rumple Minze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackhaus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goldschlager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Blitz__c</fullName>
        <label>Blitz</label>
        <picklist>
            <picklistValues>
                <fullName>Shot Heard Around the World</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BrandBottle_Size__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BrandBottle Size</label>
        <referenceTo>BrandBottle_Size__c</referenceTo>
        <relationshipLabel>Actions</relationshipLabel>
        <relationshipName>Action_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand_Bottle_Size__c</fullName>
        <label>Brand Bottle Size</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Brand_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Category</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Brand Category</relationshipLabel>
        <relationshipName>Action_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cases_Displayed__c</fullName>
        <label>Cases Displayed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Finished__c</fullName>
        <label>Date Finished</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Started__c</fullName>
        <label>Date Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <formula>IF(Goal__c = null, Objective__r.Due_Date__c, Goal__r.Due_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feature_Type__c</fullName>
        <label>Feature Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cocktail List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dessert List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drink List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shot List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wine list</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Goal</label>
        <referenceTo>Goal__c</referenceTo>
        <relationshipLabel>Actions</relationshipLabel>
        <relationshipName>Action_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gold_Standard_Accomplished__c</fullName>
        <formula>Objective__r.BrandBottle_Size__r.Brand__r.Parent_Brand__r.Gold_Standard_Shelf__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gold Standard Accomplished</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gold_Standard_Met__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gold Standard Met</label>
        <referenceTo>Gold_Standard_Met__c</referenceTo>
        <relationshipLabel>Actions</relationshipLabel>
        <relationshipName>Action_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Length_of_Training__c</fullName>
        <inlineHelpText>Length of time in minutes that the training took place</inlineHelpText>
        <label>Length of Training</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Grade__c</fullName>
        <inlineHelpText>A = Front end cap, main lobby, checkout
B = Back of store, isle display, mid end cap
C = Others</inlineHelpText>
        <label>Location Grade</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Material__c</fullName>
        <formula>Objective__r.Link_to_Content__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Material</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Attendees__c</fullName>
        <label>Number of Attendees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Objective</label>
        <referenceTo>Objective__c</referenceTo>
        <relationshipName>Action_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PDF_Link__c</fullName>
        <defaultValue>&apos;http://google.com&apos;</defaultValue>
        <label>PDF Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>POS_Items_SFA__c</fullName>
        <label>POS Items - SFA</label>
        <picklist>
            <picklistValues>
                <fullName>A-Frame Cocktail Stand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Stacker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Tucker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceiling Dangler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coasters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocktail Drink List (Books)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condiment Tray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contravision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corebuff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counter Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counter Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coupon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dummy Bottles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glassware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gutter Mat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Rings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lapel Pins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Napkin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Napkin Holder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Necker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Case Bin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Product_Sample_s__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Sample(s)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Size_of_Ad__c</fullName>
        <label>Size of Ad</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open - Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Open - In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Not Sold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Not Pitched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Not Displayed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suggested_Display_Price__c</fullName>
        <inlineHelpText>“The prices discussed herein are suggestions and for discussion purposes only. All pricing decisions are and will be the sole decision of the final selling party.”</inlineHelpText>
        <label>Suggested Display Price</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Suggested_Price__c</fullName>
        <inlineHelpText>The prices discussed herein are suggestions and for discussion purposes only. All pricing decisions are and will be the sole decision of the final selling party.</inlineHelpText>
        <label>Suggested Retail Price</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tasted_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tasted Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trainer__c</fullName>
        <label>Trainer</label>
        <picklist>
            <picklistValues>
                <fullName>Diageo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Rep (me)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand Ambassador</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Training_Audience__c</fullName>
        <label>Training Audience</label>
        <picklist>
            <picklistValues>
                <fullName>Bartender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wait Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floor Employees</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Ad__c</fullName>
        <label>Type of Ad</label>
        <picklist>
            <picklistValues>
                <fullName>Coupon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Activity History</label>
    <nameField>
        <label>Activity History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activity Histories</pluralLabel>
    <recordTypes>
        <fullName>Ad_Execution</fullName>
        <active>true</active>
        <label>Ad Execution - Control</label>
    </recordTypes>
    <recordTypes>
        <fullName>Blitz_Control</fullName>
        <active>true</active>
        <label>Blitz - Control</label>
    </recordTypes>
    <recordTypes>
        <fullName>CTSales</fullName>
        <active>true</active>
        <description>Sales Specialist &amp; Sales Manager</description>
        <label>CTSales</label>
    </recordTypes>
    <recordTypes>
        <fullName>Display</fullName>
        <active>true</active>
        <label>Display</label>
    </recordTypes>
    <recordTypes>
        <fullName>Display_Control</fullName>
        <active>true</active>
        <label>Display - Control</label>
    </recordTypes>
    <recordTypes>
        <fullName>Distribution</fullName>
        <active>true</active>
        <label>Distribution</label>
    </recordTypes>
    <recordTypes>
        <fullName>Distribution_Control</fullName>
        <active>true</active>
        <label>Distribution - Control</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ease_of_Shop</fullName>
        <active>true</active>
        <label>Ease of Shop</label>
    </recordTypes>
    <recordTypes>
        <fullName>Feature_Execution</fullName>
        <active>true</active>
        <label>Feature Execution - Control</label>
    </recordTypes>
    <recordTypes>
        <fullName>General</fullName>
        <active>true</active>
        <label>General</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Control</fullName>
        <active>true</active>
        <label>General - Control</label>
    </recordTypes>
    <recordTypes>
        <fullName>Menu_Execution</fullName>
        <active>true</active>
        <label>Menu Execution - Control</label>
    </recordTypes>
    <recordTypes>
        <fullName>Shelf_Set</fullName>
        <active>true</active>
        <label>Shelf Set - Control</label>
    </recordTypes>
    <recordTypes>
        <fullName>Staff_Training</fullName>
        <active>true</active>
        <label>Staff Training</label>
    </recordTypes>
    <recordTypes>
        <fullName>Training</fullName>
        <active>true</active>
        <label>Training - Control</label>
    </recordTypes>
    <recordTypes>
        <fullName>Window_Display</fullName>
        <active>true</active>
        <label>Window Display - Control</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>